.svn/pristine/de/de238e29d3bca1808816bc7347d0d390e9f929d5.svn-base
Naloga2.c: In function 'ps':
Naloga2.c:340:16: error: 'buff' undeclared (first use in this function)
       read(fd, buff, 65535);
                ^
Naloga2.c:340:16: note: each undeclared identifier is reported only once for each function it appears in
